--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -1,6 +1,28 @@
+
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f8f8f8;
+}
+
+.playlist-card {
+    margin-left: 50px;
+    margin-right: 50px;
+
+    border: black;
+    border-style: solid;
+    border-radius: 16px;
+
+    width: fit-content;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.playlist-cover-art {
+    padding: 5px;
 }
