Corrects margins for playlist-card. Also adds a few hardcoded playlists for demonstration purposes

--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -7,9 +7,14 @@ body {
     background-color: #f8f8f8;
 }
 
+.playlist-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .playlist-card {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 40px;
 
     border: black;
     border-style: solid;
