--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -29,6 +29,8 @@ h1 {
     margin: 0;
 }
 
+/* CSS for playlist cards */
+
 .playlist-cards {
     display: flex;
     flex-direction: row;
@@ -79,4 +81,36 @@ h1 {
 .playlist-heart-icon {
     padding-top: 16px;
     padding-right: 8px;
+}
+
+/* CSS for Modal */
+.modal {
+   display: none; 
+   position: fixed; 
+   z-index: 1; 
+   left: 0;
+   top: 0;
+   width: 100%; 
+   height: 100%; 
+   overflow: auto; 
+   background-color: rgba(0,0,0,0.4); 
+}
+.modal-content {
+   background-color: #fefefe;
+   margin: 15% auto; 
+   padding: 20px;
+   border: 1px solid #888;
+   width: 80%;
+}
+.close {
+   color: #aaa;
+   float: right;
+   font-size: 28px;
+   font-weight: bold;
+}
+.close:hover,
+.close:focus {
+   color: black;
+   text-decoration: none;
+   cursor: pointer;
 }
