--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -44,7 +44,7 @@ h1 {
     border-style: solid;
     border-radius: 16px;
 
-    width: fit-content;
+    width: 225px;
     height: fit-content;
 
     display: flex;
@@ -81,8 +81,8 @@ h1 {
 }
 
 .playlist-heart-icon {
-    padding-top: 16px;
-    padding-right: 8px;
+    margin-top: 12px;
+    padding-right: 4px;
 }
 
 /* CSS for Modal */
