--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -44,6 +44,8 @@ h1 {
     border-style: solid;
     border-radius: 16px;
 
+    overflow: hidden;
+
     width: 225px;
     height: fit-content;
 
@@ -55,7 +57,10 @@ h1 {
 }
 
 .playlist-cover-art {
+    align-self: center;
+
     padding: 4px;
+    border-radius: 16px;
 }
 
 .playlist-title {
