--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -15,7 +15,7 @@ footer {
 
 #banner {
     width: auto;
-    
+
     padding: 1%;
 
     background-color: rgb(181, 181, 181);
@@ -92,19 +92,19 @@ h1 {
 
 /* CSS for Modal */
 .modal {
-   display: none; 
-   position: fixed; 
-   z-index: 1; 
+   display: none;
+   position: fixed;
+   z-index: 1;
    left: 0;
-   top: 0;
-   width: 100%; 
-   height: 100%; 
-   overflow: auto; 
-   background-color: rgba(0,0,0,0.4); 
+   top: 0px;
+   width: 100%;
+   height: 1000px;
+   overflow: auto;
+   background-color: rgba(0,0,0,0.4);
 }
 .modal-content {
    background-color: #fefefe;
-   margin: 15% auto; 
+   margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
@@ -120,4 +120,26 @@ h1 {
    color: black;
    text-decoration: none;
    cursor: pointer;
+}
+.modal-song-widget {
+    background-color: rgb(207, 207, 207);
+
+    border-radius: 16px;
+    margin: 8px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    list-style-type: none;
+}
+#modal-song-cover {
+    border-radius: 16px;
+}
+#playlist-shuffle-button {
+    background-color: aqua;
+
+    border-radius: 16px;
+
+    cursor: pointer;
 }
